# The-Idiosyncratic-Alpha-of-Zurich-Housing

./: README.md  pyproject.toml
data/interim/: combined.csv
data/processed/: combined_stationary.csv
models/: ridge_local_forecast_results.joblib  ridge_macro_forecast_results.joblib  var_forecast_results.joblib
notebooks/: 1.0_data-exploration-and-combine-data.ipynb  1.1_stationarity-cointegration-structuralchange-check.ipynb  2.0-ridge-regression.ipynb  2.1-VAR.ipynb  3.0-model-comparison.ipynb  PS1_liamtessendorf.ipynb
reports/: project_proposal.md
tsa/: plots.py
tsa/modeling/: __init__.py  predict.py
